# Codex-Channel

./: .gitignore  Cargo.toml  README.md
config/: console.example.toml  feishu.example.toml  feishu.production.example.toml
config/.codex-channel/: sessions.json
deploy/macos/: com.codex-channel.example.plist
docs/superpowers/plans/: 2026-04-05-refactor-architecture.md
docs/superpowers/specs/: 2026-04-05-refactor-architecture-design.md
src/: codex.rs  codex_app_server.rs  config.rs  gateway.rs  main.rs  model.rs  session_store.rs
src/app/: gateway.rs
src/app/services/: conversation_service.rs  interaction_service.rs  mod.rs  thread_service.rs  turn_service.rs
src/backend/: mod.rs  traits.rs
src/backend/codex/: app_server_backend.rs  exec_backend.rs  mapping.rs  mod.rs
src/domain/: command.rs  conversation.rs  interaction.rs  message.rs  mod.rs  mode.rs  thread.rs
src/frontend/: mod.rs  traits.rs
src/frontend/console/: mod.rs
src/frontend/feishu/: mod.rs  parsing.rs  rendering.rs  transport.rs
src/im/: console.rs  feishu.rs  mod.rs
target-hotfix/: .rustc_info.json
target-hotfix/debug/: codex-channel.d
target-hotfix/debug/.fingerprint/anyhow-294423e3b0b98dcd/: run-build-script-build-script-build  run-build-script-build-script-build.json
target-hotfix/debug/.fingerprint/anyhow-75ce7fa04675ff2d/: lib-anyhow  lib-anyhow.json
target-hotfix/debug/.fingerprint/anyhow-fb0176c3089909b6/: build-script-build-script-build  build-script-build-script-build.json
target-hotfix/debug/.fingerprint/async-trait-cec83f7bcd957a5f/: lib-async_trait  (+1 more)
(+354 files in other folders)
